--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,4 @@
 <footer id="footer">
-    {{ .Site.Params.copyright }}
+    {{ .Site.Params.copyright }} 
+    {{- partial "beian.html" . -}}
 </footer>
