--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,6 +1,6 @@
 <li>
     <a href="{{ .Permalink }}">
         {{ .Title }}
-        <small><time>{{ .Date | time.Format (i18n "posts.date") }}</time></small>
+        <small><time>{{ .Date.Format "2006-01-02" }}</time></small>
     </a>
 </li>
