--- a/layouts/_default/taxonomy.html
+++ b/layouts/_default/taxonomy.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
 <h3>{{ .Title }}</h3>
 <ul id="posts">
-{{- range .Pages }}
-    {{ .Render "li" }}
+{{- range (sort .Pages "Title" "asc") }}
+    {{ .Render "li-taxonomy" }}
 {{- end }}
 </ul>
 {{ end }}
