--- a/layouts/partials/posts.html
+++ b/layouts/partials/posts.html
@@ -1,6 +1,13 @@
 <h3>{{ i18n "posts.title" }}</h3>
 <ul id="posts">
+{{- $lastyear := 0 -}}
 {{- range where site.RegularPages "Type" "in" site.Params.mainSections }}
+
+    {{- if ne .Date.Year $lastyear -}}
+        {{- $lastyear = .Date.Year -}}
+        <li class="posts-list-item-year">{{ $lastyear }}</li>
+    {{- end -}}
+
     {{ .Render "li" }}
 {{- end }}
 </ul>
