--- a/assets/css/min770px.css
+++ b/assets/css/min770px.css
@@ -1,6 +1,6 @@
 @media (min-width: 770px) {
 body {
-    width: 600px;
+    width: 75%;
     line-height: 1.5;
 }
 
@@ -28,7 +28,7 @@ main#content ul#posts {
 /* single.html styles */
 main#content header#post-header h1 {
     font-size: 24px;
-    font-size: 2.4rem;
+    font-size: 3rem;
 }
 
 main#content img {
