--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@ body {
     font-size: 1.6rem;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     color: #313a3d;
+    background-color: #eee;
     width: 100%;
     margin: 0 auto;
     padding: 0 16px;
