--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -203,6 +203,7 @@ main#content #toc ol li:before {
 main#content img {
     max-width: 100%;
     margin: 0 auto;
+    max-height: 30em;
 }
 
 main#content figure {
@@ -213,6 +214,7 @@ main#content figure img {
     display: block;
     max-width: 100%;
     margin: 0 auto;
+    max-height: 30em;
 }
 
 main#content figure figcaption {
