--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,6 +1,15 @@
 <li>
     <a href="{{ .Permalink }}">
         {{ .Title }}
-        <small><time>{{ .Date.Format "2006-01-02" }}</time></small>
+        <small>
+            <span id="tag-container">
+                {{- range $tag := .Params.tags }}
+                    <a href="/tags/{{$tag}}" class="tag-link">#{{ $tag }}</a>
+                {{- end -}}
+            </span>
+        </small>
+        <small>
+            <time>{{ .Date.Format "2006-01-02" }}</time>
+        </small>
     </a>
 </li>
