--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,6 +3,13 @@
     <header id="post-header">
         <h1>{{ .Title }}</h1>
         <div>
+            <small>
+                <span id="tag-container">
+                    {{- range $tag := .Params.tags }}
+                        <a href="/tags/{{$tag}}" class="tag-link">#{{ $tag }}</a>
+                    {{- end -}}
+                </span>
+            </small>
         {{- if isset .Params "date" -}}
             <time>{{ .Date.Format "2006-01-02" }}</time>
             {{ if eq .Lastmod .Date }}
