add math equation support via mathjax

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,6 +34,10 @@
     {{ $css := $resources | resources.Concat "css/style.css" | minify }}
     {{ printf `<link rel="stylesheet" href="%s">` $css.RelPermalink | safeHTML }}
 
+    {{ if .Param "math" }}
+        {{ partial "math.html" . }}
+    {{ end }}
+
     <link rel="canonical" href="{{ .Permalink }}" />
     <title>{{ .Title }}</title>
 </head>
